{
  "header": {
    "title": "הגדרות"
  },
  "section": {
    "appearance": "מראה",
    "servers": "שרתים",
    "notifications": "התראות",
    "permissions": "הרשאות",
    "about": "אודות",
    "displayedServers": "שרתים מוצגים",
    "history": "היסטוריה",
...
