{
  "header": {
    "title": "Settings"
  },
  "section": {
    "appearance": "Appearance",
    "servers": "Servers",
    "notifications": "Notifications",
    "permissions": "Permissions",
    "about": "About",
    "displayedServers": "Displayed Servers",
    "history": "History",
...
